tests/baselines/reference/noImplicitReturnsWithProtectedBlocks3.errors.txt
noImplicitReturnsWithProtectedBlocks3.ts(4,20): error TS2366: Function lacks ending return statement and return type does not include 'undefined'.


==== noImplicitReturnsWithProtectedBlocks3.ts (1 errors) ====
    declare function log(s: string): void;
    declare function get(): number;
    
    function main1() : number {
                       ~~~~~~
!!! error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
        try {
            return get();
        }
        catch(e) {
            log("in catch");
        }
    }